PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/NoCopyInFrontend.par
NoCopyInFrontend {


seq main() : Void {
    var [Int] test = [0,0]
    test = copy(test)

}
}